<resources>
    <string name="app_name">Car</string>
    <string name="title_activity_maps">Car</string>
    <string name="start">Адрес отправки</string>
    <string name="next">Адрес прибытия</string>
    <string name="add_next_point">Добавить промежуточную точку</string>
    <string name="intermediate">Промежуточная точка</string>
    <string name="start_bt">Старт</string>
    <string name="connection_suspended">Connection Suspended</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="max_5">No more then 5</string>
    <string name="error">Error</string>
    <string name="from_db_bt">Записанный трек</string>
</resources>
